# scout

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  build.rs
.github/workflows/: build-linux-binary.yml  build-package-apk.yml  build-package-appimage.yml  build-package-flatpak.yml  build-windows-binary.yml  release.yml
packaging/apk/: APKBUILD
packaging/appimage/: AppRun  appimage-builder.yml
packaging/aur/: PKGBUILD
packaging/completions/: generate-completions.sh
packaging/deb/: build-debian-package.sh
packaging/deb/debian/: control  postinst  prerm
packaging/desktop/: rwifi.desktop  scout.desktop
packaging/flatpak/: build-flatpak.sh  org.local76.rwifi.yaml
packaging/nix/: default.nix
packaging/rpm/: build-redhat-rpm.sh  rwifi.spec
packaging/winget/: winget.yaml
packaging/wix/: build-windows-msi.ps1  main.wxs
scripts/: build.sh  release.sh  test.sh
src/: clipboard.rs  clipboard_tests.rs  config.rs  input.rs  logger.rs  main.rs  reg.rs  tests_perf.rs  widgets.rs  win32.rs  wlan.rs  worker.rs
src/app/: keys.rs  keys_wifi.rs  mod.rs
src/backend/: config_tests.rs  event_log.rs  identity.rs  identity_tests.rs  mod.rs  notification.rs  sys_info.rs  sys_info_tests.rs
src/backend/wlan/: mod.rs  stub.rs  stub_connect.rs
src/backend/wlan/win32/: connect.rs  connect_hidden.rs  enterprise.rs  mod.rs  profiles.rs  radio.rs
src/ui/: accent_gauge.rs  colors.rs  colors_tests.rs  layout.rs  layout_helpers.rs  layout_helpers_tests.rs  markdown.rs  mod.rs  overlays.rs  overlays_password.rs  overlays_share.rs  panels.rs  text.rs  textbox.rs  utils.rs  widgets.rs  widgets_header_footer.rs
