[package]
name = "scout"
version = "2026.6.9"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.30"
qrcodegen = "1.8.0"
library = { path = "../library", features = ["widgets", "sys-info", "window", "clipboard", "notification", "event-log", "scenes"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_EventLog",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/x86_64-unknown-linux-musl/release/scout", "usr/bin/scout", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/scout.png", "644"],
    ["packaging/desktop/scout.desktop", "usr/share/applications/scout.desktop", "644"],
]



