[package]
name = "scout"
version = "2026.6.10-1"
edition = "2024"

[features]
default = ["event-log", "notification"]
event-log = []
notification = []

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["termwiz"] }
crossterm = "0.28"

qrcodegen = "1.8.0"

[target.'cfg(windows)'.dependencies]

windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_EventLog",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Dwm",
    "Win32_UI_Accessibility",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/release/scout", "usr/bin/scout", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/scout.png", "644"],
    ["packaging/desktop/scout.desktop", "usr/share/applications/scout.desktop", "644"],
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo
